# GOOPEA

./: .gitignore  GOOPEA.sh  README.md  test  visualize_data.py
language/: .gitignore  Cargo.toml
language/benchmarks/: benchmark_fip.json  benchmark_nofip.json  compile_c_reverse.sh  compile_examples.sh  run_reverse_benchmark.sh  test_fib.goo  test_fizzbuzz.goo  test_random.goo  test_reverse.goo  test_sorting.goo  test_tree.goo
language/benchmarks/FIP/: reverse_1.goo  reverse_10.goo  reverse_11.goo  reverse_12.goo  reverse_13.goo  reverse_14.goo  reverse_15.goo  reverse_16.goo  reverse_17.goo  reverse_18.goo  reverse_19.goo  reverse_2.goo  reverse_20.goo  reverse_21.goo  reverse_22.goo  reverse_23.goo  reverse_24.goo  reverse_25.goo  reverse_26.goo  reverse_27.goo  reverse_28.goo  reverse_29.goo  (+7 more)
language/examples/: BST.goo  arithmetic.goo  bools.goo  complex_match.goo  dag.goo  include.goo  inorder.goo  integer.goo  lib.goo  list.goo  multiple_return_values.goo  rand.goo  reftest.goo  reuse_different_type.goo  reverse-test.goo  reverse.goo  test.goo  tree.goo  tree_flip.goo  type_error.goo  utuple-test.goo  zipper_tree.goo
language/src/: ast.rs  ast2.rs  cast.rs  code.rs  core.rs  error.rs  grammar.lalrpop  interpreter.rs  ir.rs  lexer.rs  lib.rs  main.rs  preprocessor.rs  scoped.rs  scoped_ast.rs  score.rs  simple_ast.rs  stir.rs  tests.rs  testsyntax.txt  typed_ast.rs
language/tests/: list.goo  rand.goo  test_0.goo  test_1.goo  test_2.goo  test_2_fip.goo  test_3.goo  test_4.goo  test_5.goo  test_6.goo  test_7.goo  test_huge.goo  test_sorting.goo  tree.goo
(+135 files in other folders)
