[package]
name = "language"
version = "0.1.0"
edition = "2024"

[lib]
name = "language"
path = "src/lib.rs"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
logos = "0.15.0"
thiserror = "2.0.12"
input = { git = "https://github.com/Carlsonen/input.git" }
itertools = "0.14.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.37", features = ["derive"] }

[profile.dev]
overflow-checks = false
